feat: :sparkles: control de excepciones