@@ -5,18 +5,20 @@ import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import org.modelmapper.AbstractConverter;
 import org.modelmapper.Converter;
 import org.modelmapper.ModelMapper;
 import org.modelmapper.convention.MatchingStrategies;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
-import com.alness.lifemaster.common.dto.ResponseDto;
+import com.alness.lifemaster.common.dto.ResponseServerDto;
+import com.alness.lifemaster.common.keys.Filters;
+import com.alness.lifemaster.common.messages.Messages;
 import com.alness.lifemaster.exceptions.RestExceptionHandler;
 import com.alness.lifemaster.income.dto.request.IncomeRequest;
 import com.alness.lifemaster.income.dto.response.IncomeResponse;
@@ -28,6 +30,8 @@ import com.alness.lifemaster.users.entity.UserEntity;
 import com.alness.lifemaster.users.repository.UserRepository;
 import com.alness.lifemaster.utils.ApiCodes;
 import com.alness.lifemaster.utils.DateTimeUtils;
+import com.alness.lifemaster.utils.FuncUtils;
+import com.alness.lifemaster.utils.LoggerUtil;
 
 import jakarta.annotation.PostConstruct;
 import lombok.extern.slf4j.Slf4j;
@@ -72,19 +76,19 @@ public class IncomeServiceImpl implements IncomeService {
 
     @Override
     public List<IncomeResponse> find(String userId, Map<String, String> params) {
-        params.put("user", userId);
-        Specification<IncomeEntity> specification = filterWithParameters(params);
+        Specification<IncomeEntity> specification = filterWithParameters(FuncUtils.integrateUser(userId, params));
         return incomeRepository.findAll(specification)
                 .stream()
                 .map(this::mapperDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public IncomeResponse findOne(String userId, String id) {
-        IncomeEntity income = incomeRepository.findById(UUID.fromString(id))
+        IncomeEntity income = incomeRepository
+                .findOne(filterWithParameters(Map.of(Filters.KEY_USER, userId, Filters.KEY_ID, id)))
                 .orElseThrow(() -> new RestExceptionHandler(ApiCodes.API_CODE_404, HttpStatus.NOT_FOUND,
-                        "Income not found."));
+                        String.format(Messages.NOT_FOUND, id)));
         return mapperDto(income);
     }
 
@@ -93,27 +97,73 @@ public class IncomeServiceImpl implements IncomeService {
         IncomeEntity income = mapper.map(request, IncomeEntity.class);
         UserEntity user = userRepository.findById(UUID.fromString(userId))
                 .orElseThrow(
-                        () -> new RestExceptionHandler(ApiCodes.API_CODE_404, HttpStatus.NOT_FOUND, "User not found."));
+                        () -> new RestExceptionHandler(ApiCodes.API_CODE_404, HttpStatus.NOT_FOUND,
+                                String.format(Messages.NOT_FOUND, userId)));
         income.setUser(user);
         try {
             income = incomeRepository.save(income);
+        } catch (DataIntegrityViolationException ex) {
+            LoggerUtil.logError(ex);
+            throw new RestExceptionHandler(ApiCodes.API_CODE_400, HttpStatus.BAD_REQUEST,
+                    Messages.DATA_INTEGRITY);
         } catch (Exception e) {
-            log.error("Error to save income {}", e.getMessage());
-            e.printStackTrace();
+            LoggerUtil.logError(e);
             throw new RestExceptionHandler(ApiCodes.API_CODE_500, HttpStatus.INTERNAL_SERVER_ERROR,
-                    "Error to save invome.");
+                    Messages.ERROR_ENTITY_UPDATE);
         }
         return mapperDto(income);
     }
 
     @Override
     public IncomeResponse update(String userId, String id, IncomeRequest request) {
-        throw new UnsupportedOperationException("Unimplemented method 'update'");
+        // Buscar ingreso existente
+        IncomeEntity existingIncome = incomeRepository
+                .findOne(filterWithParameters(Map.of(Filters.KEY_USER, userId, Filters.KEY_ID, id)))
+                .orElseThrow(() -> new RestExceptionHandler(ApiCodes.API_CODE_404, HttpStatus.NOT_FOUND,
+                        String.format(Messages.NOT_FOUND, id)));
+
+        // Verificar que el ingreso pertenece al usuario
+        if (!existingIncome.getUser().getId().toString().equals(userId)) {
+            throw new RestExceptionHandler(ApiCodes.API_CODE_403, HttpStatus.FORBIDDEN,
+                    Messages.FORBIDEN_UPDATE_DATA);
+        }
+
+        // Mapear nuevos datos al ingreso existente
+        mapper.map(request, existingIncome);
+
+        try {
+            existingIncome = incomeRepository.save(existingIncome);
+        } catch (DataIntegrityViolationException ex) {
+            LoggerUtil.logError(ex);
+            throw new RestExceptionHandler(ApiCodes.API_CODE_400, HttpStatus.BAD_REQUEST,
+                    Messages.DATA_INTEGRITY);
+        } catch (Exception e) {
+            LoggerUtil.logError(e);
+            throw new RestExceptionHandler(ApiCodes.API_CODE_500, HttpStatus.INTERNAL_SERVER_ERROR,
+                    Messages.ERROR_ENTITY_UPDATE);
+        }
+
+        return mapperDto(existingIncome);
     }
 
     @Override
-    public ResponseDto delete(String userId, String id) {
-        throw new UnsupportedOperationException("Unimplemented method 'delete'");
+    public ResponseServerDto delete(String userId, String id) {
+        IncomeEntity income = incomeRepository
+                .findOne(filterWithParameters(Map.of(Filters.KEY_USER, userId, Filters.KEY_ID, id)))
+                .orElseThrow(() -> new RestExceptionHandler(ApiCodes.API_CODE_404, HttpStatus.NOT_FOUND,
+                        String.format(Messages.NOT_FOUND, id)));
+        try {
+            incomeRepository.delete(income);
+            return new ResponseServerDto(String.format(Messages.ENTITY_DELETE, id), HttpStatus.ACCEPTED, true);
+        } catch (DataIntegrityViolationException ex) {
+            LoggerUtil.logError(ex);
+            throw new RestExceptionHandler(ApiCodes.API_CODE_400, HttpStatus.BAD_REQUEST,
+                    Messages.DATA_INTEGRITY);
+        } catch (Exception e) {
+            LoggerUtil.logError(e);
+            throw new RestExceptionHandler(ApiCodes.API_CODE_409, HttpStatus.CONFLICT,
+                    String.format(Messages.ERROR_ENTITY_DELETE, e.getMessage()));
+        }
     }
 
     private IncomeResponse mapperDto(IncomeEntity source) {
